template_v2/src/compiling_error.txt
/Users/thibaultblanpain/Documents/GitHub/LSINF1252_projet_cracker_Nat1236_and_ThibaultBlanpain/template_v2/src/main.c:17:35: error: invalid operands to binary expression ('void' and 'void *')
  for(i = 0; i < argc && fichs[i] != NULL; i++)
                         ~~~~~~~~ ^  ~~~~
/Users/thibaultblanpain/Documents/GitHub/LSINF1252_projet_cracker_Nat1236_and_ThibaultBlanpain/template_v2/src/main.c:19:14: warning: implicit declaration of function 'open' is invalid in C99 [-Wimplicit-function-declaration]
    int fd = open(filename, O_RDONLY);
             ^
/Users/thibaultblanpain/Documents/GitHub/LSINF1252_projet_cracker_Nat1236_and_ThibaultBlanpain/template_v2/src/main.c:19:19: error: use of undeclared identifier 'filename'
    int fd = open(filename, O_RDONLY);
                  ^
/Users/thibaultblanpain/Documents/GitHub/LSINF1252_projet_cracker_Nat1236_and_ThibaultBlanpain/template_v2/src/main.c:19:29: error: use of undeclared identifier 'O_RDONLY'
    int fd = open(filename, O_RDONLY);
                            ^
/Users/thibaultblanpain/Documents/GitHub/LSINF1252_projet_cracker_Nat1236_and_ThibaultBlanpain/template_v2/src/main.c:21:14: warning: incompatible integer to pointer conversion returning 'int' from a function with result type 'void *' [-Wint-conversion]
      return -1; //fails to open ok
             ^~
/Users/thibaultblanpain/Documents/GitHub/LSINF1252_projet_cracker_Nat1236_and_ThibaultBlanpain/template_v2/src/main.c:30:16: warning: incompatible integer to pointer conversion returning 'int' from a function with result type 'void *' [-Wint-conversion]
        return -3;
               ^~
/Users/thibaultblanpain/Documents/GitHub/LSINF1252_projet_cracker_Nat1236_and_ThibaultBlanpain/template_v2/src/main.c:31:14: warning: incompatible integer to pointer conversion returning 'int' from a function with result type 'void *' [-Wint-conversion]
      return -2; //fails to read ok
             ^~
/Users/thibaultblanpain/Documents/GitHub/LSINF1252_projet_cracker_Nat1236_and_ThibaultBlanpain/template_v2/src/main.c:107:26: warning: incompatible pointer to integer conversion assigning to 'char' from 'char *'; dereference with * [-Wint-conversion]
        fichs[placeFich] = argTestBin ;
                         ^ ~~~~~~~~~~
                           *
/Users/thibaultblanpain/Documents/GitHub/LSINF1252_projet_cracker_Nat1236_and_ThibaultBlanpain/template_v2/src/main.c:115:75: error: indirection requires pointer operand ('int' invalid)
  if (pthread_create(&thread_lectureEasy, NULL, lecture, ((void *) fichs, *argc)) == -1) {
                                                                          ^~~~~
5 warnings and 4 errors generated.
